# kinode_rng

./: .gitignore  Cargo.toml  README.md  metadata.json
kinode_rng/: Cargo.toml
kinode_rng/src/: icon  lib copy.rs  lib.rs  lib2.rs
pkg/: manifest.json
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css
ui/src/store/: rng.ts
ui/src/types/: Rng.ts
