[package]
name = "kinode_rng"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", tag = "v0.6.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "21a46c7" }
chrono = { version = "0.4.31", features = ["serde"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rand_chacha = "0.3.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
